--- a/ejercicio_1/index.html
+++ b/ejercicio_1/index.html
@@ -8,7 +8,12 @@
 <body>
     <h1>Primer Ejemplo con VueJS</h1>
     <!-- Declarando el ambito de nuestro VueJS. La referencia debe ser unica dentro del body, no puede ser el mismo body o html  -->
-    <div id="vuejs"></div>
+    <div id="vm">
+        <p>
+            {{mensaje}}
+            {{suma}}
+        </p>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="js/app.js"></script>
 </body>
