--- a/ejercicio_3/index.html
+++ b/ejercicio_3/index.html
@@ -12,6 +12,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="components/saludoInicial.js"></script>
+    <script src="components/directivaHTML.js"></script>
     <script src="components/directivasVue.js"></script>
     <script>
       const vm = new Vue({
