--- a/ejercicio_3/index.html
+++ b/ejercicio_3/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="components/saludoInicial.js"></script>
     <script src="components/directivaHTML.js"></script>
+    <script src="components/directivaShow.js"></script>
     <script src="components/directivasVue.js"></script>
     <script>
       const vm = new Vue({
