--- a/ejercicio_3/index.html
+++ b/ejercicio_3/index.html
@@ -14,6 +14,7 @@
     <script src="components/saludoInicial.js"></script>
     <script src="components/directivaHTML.js"></script>
     <script src="components/directivaShow.js"></script>
+    <script src="components/directiveIf.js"></script>
     <script src="components/directivasVue.js"></script>
     <script>
       const vm = new Vue({
