agregando cambios al ejemplo3

--- a/ejercicio_3/index.html
+++ b/ejercicio_3/index.html
@@ -15,6 +15,7 @@
     <script src="components/directivaHTML.js"></script>
     <script src="components/directivaShow.js"></script>
     <script src="components/directiveIf.js"></script>
+    <script src="components/directivaClick.js"></script>
     <script src="components/directivasVue.js"></script>
     <script>
       const vm = new Vue({
