--- a/ejercicio_3/index.html
+++ b/ejercicio_3/index.html
@@ -7,17 +7,22 @@
   </head>
   <body>
     <div id="vm">
+      <!-- Los componentes se inician como una etiqueta, el nombre sale del ingresado en la estructura del componente-->
         <saludo-inicial></saludo-inicial>
         <directivas-vue></directivas-vue>
     </div>
+    <!-- Con estos script llamamos a cada uno de los archivos por individual donde estan los componentes y los hijos de los componentes-->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- Este es el primer componente que se llama exactamente debajo del CDN de VueJS-->
     <script src="components/saludoInicial.js"></script>
+    <!--Los hijos del componente, se llaman arriba del padre o componente principal-->
     <script src="components/directivaHTML.js"></script>
     <script src="components/directivaShow.js"></script>
     <script src="components/directiveIf.js"></script>
     <script src="components/directivaClick.js"></script>
     <script src="components/directivasVue.js"></script>
     <script>
+      // aquí iniciamos la instanacia de Vue.
       const vm = new Vue({
         el: "#vm"
       });
