agregando v-for ejercicio 3

--- a/ejercicio_3/index.html
+++ b/ejercicio_3/index.html
@@ -20,6 +20,7 @@
     <script src="components/directivaShow.js"></script>
     <script src="components/directiveIf.js"></script>
     <script src="components/directivaClick.js"></script>
+    <script src="components/directivaFor.js"></script>
     <script src="components/directivasVue.js"></script>
     <script>
       // aquí iniciamos la instanacia de Vue.
