agregando cambios al ejemplo 3 con v-on

--- a/ejercicio_3/index.html
+++ b/ejercicio_3/index.html
@@ -21,6 +21,7 @@
     <script src="components/directiveIf.js"></script>
     <script src="components/directivaClick.js"></script>
     <script src="components/directivaFor.js"></script>
+    <script src="components/directivaOn.js"></script>
     <script src="components/directivasVue.js"></script>
     <script>
       // aquí iniciamos la instanacia de Vue.
