agregando cambios al ejemplo 3

--- a/ejercicio_3/index.html
+++ b/ejercicio_3/index.html
@@ -23,6 +23,9 @@
     <script src="components/directivaClick.js"></script>
     <script src="components/directivaFor.js"></script>
     <script src="components/directivaOn.js"></script>
+    <script src="components/directivaModel.js"></script>
+    <script src="components/componenteSlot/componenteBoton.js"></script>
+    <script src="components/directivaSlot.js"></script>
     <script src="components/directivasVue.js"></script>
     <script>
       // aquí iniciamos la instanacia de Vue.
