--- a/ejercicio_3/index.html
+++ b/ejercicio_3/index.html
@@ -26,6 +26,7 @@
     <script src="components/directivaModel.js"></script>
     <script src="components/componenteSlot/componenteBoton.js"></script>
     <script src="components/directivaSlot.js"></script>
+    <script src="components/directivaPre.js"></script>
     <script src="components/directivasVue.js"></script>
     <script>
       // aquí iniciamos la instanacia de Vue.
