--- a/ejercicio_3/index.html
+++ b/ejercicio_3/index.html
@@ -25,6 +25,7 @@
     <script src="components/directivaOn.js"></script>
     <script src="components/directivaModel.js"></script>
     <script src="components/componenteSlot/componenteBoton.js"></script>
+    <script src="components/componenteSlot/componenteContainer.js"></script>
     <script src="components/directivaSlot.js"></script>
     <script src="components/directivaPre.js"></script>
     <script src="components/directivasVue.js"></script>
