--- a/ejercicio_5/index.html
+++ b/ejercicio_5/index.html
@@ -10,11 +10,13 @@
     <div id="vm">
       <!-- Los componentes se inician como una etiqueta, el nombre sale del ingresado en la estructura del componente-->
         <computed-properties></computed-properties>
+        <computed-propgetset></computed-propgetset>
     </div>
     <!-- Con estos script llamamos a cada uno de los archivos por individual donde estan los componentes y los hijos de los componentes-->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <!-- Este es el primer componente que se llama exactamente debajo del CDN de VueJS-->
     <script src="computedComponents/computedProperties.js"></script>
+    <script src="computedComponents/computedPropGetSet.js"></script>
     <script>
       // aquí iniciamos la instanacia de Vue.
       const vm = new Vue({
