--- a/ejercicio_2/index.html
+++ b/ejercicio_2/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div id="vm">
-        <!-- Agregando componente en VueJS con template de HTML-->
-        <saludo-inicial></saludo-inicial>
         <!--Insertando variable desde instancia de VuejS-->
         <h3>{{mensaje}}</h3>
+        <!-- Agregando componente en VueJS con template de HTML-->
+        <componente-inicial></componente-inicial>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="js/componentes/saludoInicial.js"></script>
+    <script src="js/componentes/componente-Inicial.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
