--- a/aplicacion_basica/index.html
+++ b/aplicacion_basica/index.html
@@ -18,6 +18,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="components/peliculas/peliculaComponent.js"></script>
+    <script src="components/peliculas/busquedaComponent.js"></script>
     <script src="components/peliculas/peliculaFavorita.js"></script>
     <script src="components/index.js"></script>
     <script>
