agregnado Vue Router

--- a/aplicacion_basica/index.html
+++ b/aplicacion_basica/index.html
@@ -11,15 +11,16 @@
   </head>
   <body>
     <div id="vm">
-        <peliculas-app></peliculas-app>
+        <router-view></router-view>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script src="components/peliculas/peliculaComponent.js"></script>
     <script src="components/peliculas/busquedaComponent.js"></script>
     <script src="components/peliculas/peliculaFavorita.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="components/index.js"></script>
     <script>
       // utilizando mixin global
@@ -30,9 +31,33 @@
           }
         }
       });
+      // creando componente de prueba
+      let test = {
+        template: `<h1>Componente de prueba con Router VueJS</h1>`,
+      }
+      // creando las rutas con Vue-router
+      let routes = [
+        {
+          path: '/',
+          name: 'home',
+          component: peliculasApp
+        },
+        {
+          path: '/test',
+          name: 'test',
+          component: test
+        }
+      ];
+      // pasando las rutas creadas
+      const router = new VueRouter({
+          mode: 'history',
+          routes: routes
+      });
       // aquí iniciamos la instanacia de Vue.
       const vm = new Vue({
-        el: "#vm"
+        el: "#vm",
+        //se indica que busque y use las rutas
+        router
       });
     </script>
   </body>
