--- a/aplicacion_basica/index.html
+++ b/aplicacion_basica/index.html
@@ -18,6 +18,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src="https://unpkg.com/vuex@2.0.0"></script>
     <script src="components/peliculas/peliculaComponent.js"></script>
     <script src="components/peliculas/busquedaComponent.js"></script>
     <script src="components/peliculas/peliculaFavorita.js"></script>
@@ -31,7 +32,9 @@
         data() {
           return {
             apiConfigura: `?api_key=${APIKEY}&language=en-US`,
-            apiBaseUrl: URL_BASICA
+            apiBaseUrl: URL_BASICA,
+            datos: {},
+            id2: null
           }
         },
         filters: {
@@ -67,11 +70,24 @@
           mode: 'history',
           routes: routes
       });
+      // agregando Vuex al proyecto
+      const store = new Vuex.Store({
+        state: {
+          peliFav: []
+        },
+        mutations: {
+          addPeliFav (state,pelicula){
+            console.log(state);
+            state.peliFav.push(pelicula);
+          }
+        }
+      });
       // aquí iniciamos la instanacia de Vue.
       const vm = new Vue({
         el: "#vm",
         //se indica que busque y use las rutas
-        router
+        router,
+        store
       });
     </script>
   </body>
