--- a/Ejemplo_2/index.html
+++ b/Ejemplo_2/index.html
@@ -31,12 +31,12 @@
         </div>
         <!-- Utilizando V-FOR-->
         <div v-for="(item, index) in nombres" :key="index">
-            {{index}}--->{{item}}
+            {{index}}-{{item}}
         </div>
         <div>
-            <br>
+            <br>Sin directiva v-html
             {{conte_html}}
-            <div v-html="conte_html"></div>
+            <div>Con directiva v-html: <span v-html="conte_html"></span></div>
         </div>
     </div>
     <!--Llamando a VueJS por CDN-->
