usando v-bind en imagen

--- a/Ejemplo_2/index.html
+++ b/Ejemplo_2/index.html
@@ -41,7 +41,7 @@
         </div>
         <!-- Utilizando V-BIND-->
         <p>Utilizado v-bind</p>
-        <img :src="direccion" alt="alternativa">
+        <img v-bind:src="direccion" :alt="alterna">
     </div>
     <!--Llamando a VueJS por CDN-->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
