agregnado directiva v-show

--- a/Ejemplo_2/index.html
+++ b/Ejemplo_2/index.html
@@ -48,6 +48,9 @@
         <hr>
         <input type="text" v-model="vmodel">
         <p>{{vmodel}}</p>
+        <!-- Utilizando V-SHOW-->
+        <p>Utilizado v-show</p>
+        <h1 v-show="data_error">Texto con v-show para mostrar y ocultar</h1>
     </div>
     <!--Llamando a VueJS por CDN-->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
