agregnado uso de slot con boostrap

--- a/Ejercicio_6/index.html
+++ b/Ejercicio_6/index.html
@@ -26,6 +26,9 @@
           Ventana Modal
         </button>
         <ventana-modal>
+            <div slot="titulo">
+                <h5 class="modal-title" id="exampleModalScrollableTitle">Titulo de la Venta Modal</h5>
+            </div>
             <p>Contenido para ventana modal en compenente</p>
         </ventana-modal>
         <!-- Enrutador de salida. El componente que coincida con la ruta se mostrará aquí. -->
