--- a/Ejercicio_6/index.html
+++ b/Ejercicio_6/index.html
@@ -30,6 +30,10 @@
                 <h5 class="modal-title" id="exampleModalScrollableTitle">Titulo de la Venta Modal</h5>
             </div>
             <p>Contenido para ventana modal en compenente</p>
+            <div slot="footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+              <button type="button" class="btn btn-primary">Guardar</button>
+            </div>
         </ventana-modal>
         <!-- Enrutador de salida. El componente que coincida con la ruta se mostrará aquí. -->
         <router-view></router-view>
