agregando ejercicio 7 con props

--- a/Ejercicio_7/index.html
+++ b/Ejercicio_7/index.html
@@ -50,6 +50,7 @@
     <script src="js/component/listaProgramas.js"></script>
     <script src="js/component/slot.js"></script>
     <script src="js/component/listaAlerta.js"></script>
+    <script src="js/component/imagenPost.js"></script>
     <script src="js/index.js"></script>
     <script type="text/x-template" id="ejemplo_template">
       <div>
