--- a/Ejemplo_8/src/index.html
+++ b/Ejemplo_8/src/index.html
@@ -8,10 +8,6 @@
 <body>
     <h1>Ejemplo 8</h1>
     <p>Utilizando Vue - Webpack</p>
-    <div id="app">
-
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="main.js"></script>
+    <div id="app"></div>
 </body>
 </html>
