--- a/vuestart/src/index.html
+++ b/vuestart/src/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue Desafío Latam</title>
+    <style>
+        #app {
+            font-size: 25px;
+            font-family: 'Calibri', sans-serif;
+            color: darkblue;
+            background: lightblue;
+        }
+    </style>
 </head>
 <body>
     <div id="app"></div>
